# patchymcpatchface

./: .gitignore  .pylintrc  LICENSE  README.md  build_and_upload_package.sh  dev-requirements.txt  main.py  old_readme.md  patch_apply.py  patch_manifest.py  patcher.py  pytest.sh  readme.md  requirements.txt  sample.py  setup.cfg  test_build_and_upload_package.sh  test_patch.py  test_value.py
cov_html/: index.html  main_py.html  mypackage_foo_py.html  mypackage_foobar_py.html  patch_apply_py.html  patch_manifest_py.html  patch_package_baz_py.html  patch_package_foobaz_py.html  patcher_py.html  running_package_bar_py.html  running_package_baz_py.html  running_package_bazbar_py.html  running_package_custom_patch_manifest_py.html  running_package_foo_py.html  running_package_foobar_py.html  sample_py.html  status.json  test_patch_py.html  test_value_py.html
mypackage/: foo.py  foobar.py
package_to_be_patched/: foo.py  requests_library_patch_example.py  test_requests.py
patch_package/: baz.py  foobaz.py  mock_module.py  request_patch.py
patching_example/: patching_example.py
patching_example/mypackage/: foobar.py  request_call.py
patching_example/patch_package/: baz.py  foobaz.py
patching_example/running_package/: bar.py  baz.py  bazbar.py  custom_patch_manifest.py  foo.py  foobar.py
patchymcpatchface/: __init__.py
running_package/: bar.py  baz.py  bazbar.py  custom_patch_manifest.py  foo.py  foobar.py
src/patchymcpatchface/: __init__.py  apply_patch.py  hooks.py
tests/: test_patch.py  test_requests.py  test_utils.py
(+3 files in other folders)
