[metadata]
name = patchymcpatchface
version = 0.1.9
author = Ren Xiang Foo
author_email = foorenxiang@gmail.com
description = A monkey patching library that uses only Python standard library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foorenxiang/patchymcpatchface
project_urls =
    Bug Tracker = https://github.com/foorenxiang/patchymcpatchface/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
